--- a/index.html/index.html
+++ b/index.html/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial scale=1">
     <title>Food Roulette</title>
+    <div class="container">
+      <h1 class="title">
+          Food Roulette
+      </h1>
+      <p class="subtitle">
+          <!--clever marketing subtitle-->
+      </p>
+      
  <!-- Compiled and minified CSS -->
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
@@ -14,33 +22,25 @@
           <form>
             <div class="input-field">
               <input id="search" type="search" required>
-              <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+              <label class="label-icon" for="search"><i class="material-icons">cuisine cravings</i></label>
               <i class="material-icons">close</i>
               <div class="nav-wrapper">
                 <a href="#" class="brand-logo">Nav Bar</a>
-                <ul id="nav-mobile" class="right">
-                  <li><a href="sass.html">Sass</a></li> <!--add as needed-->
-                  <li><a href="badges.html">Components</a></li> <!--add as needed-->
-                  <li><a href="collapsible.html">JavaScript</a></li> <!--add as needed-->
-                </ul>
-              </div>
-            </div>
-          </form>
-        </div>
+                <ul id="nav-mobile" class="right"></ul>
       </nav>
   <nav>
 
-  </nav>
-    <div class="card-panel teal lighten-2">This is a card panel with a teal lighten-2 class</div>
+<section class="container" id="cuisine-results">
+  <!--this is where the suggested restaurants will go upon searching-->
+</section>
 
-    <div class="container">
-        <h1 class="title">
-            Food Roulette
-        </h1>
-        <p class="subtitle">
-            Food roulette so you don't have to think too much about what to eat
-        </p>
-    </div>
+<section>
+  <a class="waves-effect waves-light btn-large red accent-2">Spin Again?</a>
+</section>
+
+<footer>
+    <!--footer note-->
+    </footer>
 </section>
 
 <!-- Compiled an minified JavaScript -->
