--- a/results-page.html
+++ b/results-page.html
@@ -11,7 +11,7 @@
 
 
     
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./assets/styles/styles.css">
 
     <title>Food Roulette!</title>
 </head>
@@ -47,3 +47,12 @@
         </div>
       </div> 
     </section>
+
+
+</body>
+  <script src = "./assets/scripts/results-scripts.js"></script>
+
+  <!-- Compiled and minified JavaScript -->
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+</html>
