Added function to get location. Made changes so data will display on the page.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="row">
           <div class="col s12 m8 offset-m2">
             <div class="input-field ">
-              <input type="text" id="textbox" class="validate">
+              <input type="text" id="search-textbox" class="validate">
               <label for="textbox">Enter Location</label>
             </div>
           </div>
