--- a/index.html
+++ b/index.html
@@ -38,23 +38,23 @@
         <div class="row">
           <div class="col s12 offset-l3 offset-m2">
             <label>
-                <input name = "group1" type="radio" class="with-gap">
+                <input name = "group1" type="radio" value="Chicken" class="with-gap">
                 <span>Chicken</span>
             </label>
             <label>
-                <input name = "group1" type="radio" class="with-gap">
+                <input name = "group1" type="radio" value="Chinese" class="with-gap">
                 <span>Chinese </span>
             </label>
             <label>
-                <input name = "group1" type="radio" class="with-gap">
+                <input name = "group1" type="radio" value="Mexican" class="with-gap">
                 <span>Mexican</span>
             </label>
             <label>
-                <input name = "group1" type="radio" class="with-gap">
+                <input name = "group1" type="radio" value="Pizza" class="with-gap">
                 <span>Pizza</span>
             </label>
             <label>
-                <input name = "group1" type="radio" class="with-gap">
+                <input name = "group1" type="radio" value="Sandwiches" class="with-gap">
                 <span>Sandwiches</span>
             </label>
           </div>
