Centered index item. RC1 edit

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     
       <div class="container">
         <div class="row">
-          <div class="col s12 offset-l3 offset-m2">
+          <div class="ccol s12 center-align">
             <label>
                 <input name = "group1" type="radio" value="Chicken" class="with-gap">
-                <span>Chicken</span>
+                <span>Chicken  </span>
             </label>
             <label>
                 <input name = "group1" type="radio" value="Chinese" class="with-gap">
@@ -47,15 +47,15 @@
             </label>
             <label>
                 <input name = "group1" type="radio" value="Mexican" class="with-gap">
-                <span>Mexican</span>
+                <span>Mexican  </span>
             </label>
             <label>
                 <input name = "group1" type="radio" value="Pizza" class="with-gap">
-                <span>Pizza</span>
+                <span>Pizza  </span>
             </label>
             <label>
                 <input name = "group1" type="radio" value="Sandwiches" class="with-gap">
-                <span>Sandwiches</span>
+                <span>Sandwiches  </span>
             </label>
           </div>
         </div>
